# CAD_lib

./: .gitignore  CMakeLists.txt  README.md  construction_example  curves_example  surfaces_example
cmake/: CADLibConfig.cmake.in
examples/: CMakeLists.txt  basic_example.cpp  construction_example.cpp  curves_example.cpp  surfaces_example.cpp  transformations_example.cpp
include/: Circle.h  Geometry.h  Loft.h  Matrix4x4.h  Mesh.h  Plane.h  Point3D.h  Vector3D.h
src/: Circle.cpp  Geometry.cpp  Loft.cpp  Matrix4x4.cpp  Mesh.cpp  Plane.cpp  Point3D.cpp  Vector3D.cpp
